--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 venv
+
+## gitignore/Global/macOS.gitignore
+
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
